src/test/fail/incomplete_generic_defaulting.ly
#[
NoReturnError: Function f completed without returning a value.
Traceback:
    Function f at line 10
    Function __main__ at line 10
]#

define f[A]( => list[A]) {  }

var v = f()
